# petal_usdcard

./: .gitmodules  CMakeLists.txt  README.md  application_task.c  application_task.h  application_task_cli.c  application_task_cli.h  console_task.c  fatfs_cli.c  fatfs_cli.h  main.c  stub.c
FreeRTOSPlusFatPort/: spi_sdcard_driver.c  spi_sdcard_driver.h  spi_sdcard_driver_config.h
bsp/: CMakeLists.txt
bsp/nm180310/: bsp_pins.src
bsp/nm180410/: bsp_pins.src
fatfs/: CMakeLists.txt
fatfs/drivers/: fsl_ram_disk.c  fsl_ram_disk.h
fatfs/drivers/ff_ram_disk/: ff_ram_disk.c  ff_ram_disk.h
fatfs/drivers/ff_sdspi_disk/: ff_sdspi_disk.c  ff_sdspi_disk.h
fatfs/drivers/ff_sdspi_disk/sdcard_spi_driver/: fsl_sdspi.c  fsl_sdspi.h  sdmmc_spec.h  sdspi.c  sdspi.h  spi_sdcard_driver.c  spi_sdcard_driver.h  spi_sdcard_driver_config.h
fatfs/source/: diskio.c  diskio.h  ffconf.h  ffsystem.c
utils/bootloader/: am_multi_boot.c
